--- a/index.html
+++ b/index.html
@@ -8,9 +8,67 @@
 </head>
 <body>
     <header>
-
+        <p lang="eng">
+            WebStudio
+        </p>
+<nav>
+<a href="">Студія</a>
+<a href="">Портфоліо</a>
+<a href="">Контакти</a>
+</nav>
+<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+<a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
     </header>
     <main>
+        <section>
+           <h1>
+            Ефективні рішення для вашого бізнесу
+           </h1>
+           <button type="button">
+            Замовити послугу
+           </button>
+        </section>
+        <section>
+            <h2>
+                Особливості
+            </h2>
+            <ul>
+                <li>
+                    <h3>
+                        УВАГА ДО ДЕТАЛЕЙ
+                    </h3>
+                    <p>
+                        Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.   
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        ПУНКТУАЛЬНІСТЬ 
+                    </h3>
+                    <p>
+                        Завдання організації, особливо рамки і місце навчання кадрів тягне у себе. 
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        ПЛАНУВАННЯ
+                    </h3>
+                    <p>
+                        Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. 
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        СУЧАСНІ ТЕХНОЛОГІЇ 
+                    </h3>
+                    <p>
+                        Значимість цих проблем настільки очевидна, що реалізація планових завдань. 
+                    </p>
+                </li>
+            </ul>
+        </section>
+        
+
 
     </main>
     <footer>
