--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <p lang="eng">
             WebStudio
         </p>
-<nav>
-<a href="">Студія</a>
-<a href="">Портфоліо</a>
-<a href="">Контакти</a>
-</nav>
-<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-<a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            <nav>
+                <a href="">Студія</a>
+                <a href="">Портфоліо</a>
+                <a href="">Контакти</a>
+            </nav>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
     </header>
     <main>
         <section>
@@ -67,11 +67,70 @@
                 </li>
             </ul>
         </section>
-        
+        <section>
+            <h2>
+                Чим ми займаємося
+            </h2>
+            <ul>
+                <li>
+                    <img src="./images/box 1 (1).jpg" alt="Робота на клавіатурі" width="370">
+                </li>
+                <li>
+                    <img src="./images/box 2 (1).jpg" alt="Телефон і ноутбук" width="370">
+                </li>
+                <li>
+                    <img src="./images/box 3 (1).jpg" alt="Робота з графікою на планшеті" width="370">
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>
+            Наша команда
+            </h2>
+            <ul>
+                <li>
+                    <img src="./images/img (8) (1).jpg" alt="Фото Ігор Дем'яненко" width="270">
+                    <p>Ігор Дем'яненко</p>
+                    <p lang="eng">Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/img (9) (1).jpg" alt="Фото Ольга Рєпіна" width="270">
+                    <p>Ольга Рєпіна</p>
+                    <p lang="eng">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/img (10) (1).jpg" alt="Фото Микола Тарасов" width="270">
+                    <p>Микола Тарасов</p>
+                    <p lang="eng">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img (11) (1).jpg" alt="Фото Михайло Єрмаков" width="270">
+                    <p>Михайло Єрмаков</p>
+                    <p lang="eng">UI Designer</p>
+                </li>
+            </ul>
+        </section>
+
 
 
     </main>
     <footer>
+        <p lang="eng">
+            WebStudio
+        </p>
+        <ul>
+            <li>
+                <address>
+                м. Київ, пр-т Лесі Українки, 26
+                </address>
+            </li>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            </li>
+        </ul>
 
     </footer>
     
