--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p lang="eng">
+        <p>
             WebStudio
         </p>
             <nav>
@@ -17,7 +17,7 @@
                 <a href="">Контакти</a>
             </nav>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
         <section>
@@ -73,13 +73,13 @@
             </h2>
             <ul>
                 <li>
-                    <img src="./images/box 1 (1).jpg" alt="Робота на клавіатурі" width="370">
+                    <img src="./images/box 1 (1).jpg" alt="keyboard work" width="370">
                 </li>
                 <li>
-                    <img src="./images/box 2 (1).jpg" alt="Телефон і ноутбук" width="370">
+                    <img src="./images/box 2 (1).jpg" alt="Phone and laptop" width="370">
                 </li>
                 <li>
-                    <img src="./images/box 3 (1).jpg" alt="Робота з графікою на планшеті" width="370">
+                    <img src="./images/box 3 (1).jpg" alt="Working with graphics on a tablet" width="370">
                 </li>
             </ul>
         </section>
@@ -89,24 +89,24 @@
             </h2>
             <ul>
                 <li>
-                    <img src="./images/img (8) (1).jpg" alt="Фото Ігор Дем'яненко" width="270">
+                    <img src="./images/img (8) (1).jpg" alt="Photo by Ihor Demyanenko" width="270">
                     <p>Ігор Дем'яненко</p>
-                    <p lang="eng">Product Designer</p>
+                    <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img (9) (1).jpg" alt="Фото Ольга Рєпіна" width="270">
+                    <img src="./images/img (9) (1).jpg" alt="Photo by Olga Repina" width="270">
                     <p>Ольга Рєпіна</p>
-                    <p lang="eng">Frontend Developer</p>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/img (10) (1).jpg" alt="Фото Микола Тарасов" width="270">
+                    <img src="./images/img (10) (1).jpg" alt="Photo by Mykola Tarasov" width="270">
                     <p>Микола Тарасов</p>
-                    <p lang="eng">Marketing</p>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img (11) (1).jpg" alt="Фото Михайло Єрмаков" width="270">
+                    <img src="./images/img (11) (1).jpg" alt="Photo by Mykhailo Yermakov" width="270">
                     <p>Михайло Єрмаков</p>
-                    <p lang="eng">UI Designer</p>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -115,7 +115,7 @@
 
     </main>
     <footer>
-        <p lang="eng">
+        <p>
             WebStudio
         </p>
         <ul>
@@ -128,7 +128,7 @@
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
 
