--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
             </h2>
             <ul>
                 <li>
-                    <img src="/images/box 1 (1).jpg" alt="keyboard work" width="370">
+                    <img src="./images/box1.jpg" alt="keyboard work" width="370">
                 </li>
                 <li>
-                    <img src="/images/box 2 (1).jpg" alt="Phone and laptop" width="370">
+                    <img src="./images/box2.jpg" alt="Phone and laptop" width="370">
                 </li>
                 <li>
-                    <img src="/images/box 3 (1).jpg" alt="Working with graphics on a tablet" width="370">
+                    <img src="./images/box3.jpg" alt="Working with graphics on a tablet" width="370">
                 </li>
             </ul>
         </section>
@@ -89,22 +89,22 @@
             </h2>
             <ul>
                 <li>
-                    <img src="/images/img (8) (1).jpg" alt="Photo by Ihor Demyanenko" width="270">
+                    <img src="./images/img8.jpg" alt="Photo by Ihor Demyanenko" width="270">
                     <p>Ігор Дем'яненко</p>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/img (9) (1).jpg" alt="Photo by Olga Repina" width="270">
+                    <img src="./images/img9.jpg" alt="Photo by Olga Repina" width="270">
                     <p>Ольга Рєпіна</p>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/img (10) (1).jpg" alt="Photo by Mykola Tarasov" width="270">
+                    <img src="./images/img10.jpg" alt="Photo by Mykola Tarasov" width="270">
                     <p>Микола Тарасов</p>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/img (11) (1).jpg" alt="Photo by Mykhailo Yermakov" width="270">
+                    <img src="./images/img11.jpg" alt="Фото Михайло Єрмаков" width="270">
                     <p>Михайло Єрмаков</p>
                     <p>UI Designer</p>
                 </li>
