--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
             </h2>
             <ul>
                 <li>
-                    <img src="./images/box1.jpg" alt="keyboard work" width="370">
+                    <img src="./images/box1.jpg" alt="Праця за клавіатурою" width="370">
                 </li>
                 <li>
-                    <img src="./images/box2.jpg" alt="Phone and laptop" width="370">
+                    <img src="./images/box2.jpg" alt="Телефон та планшет.Адаптивні технології" width="370">
                 </li>
                 <li>
-                    <img src="./images/box3.jpg" alt="Working with graphics on a tablet" width="370">
+                    <img src="./images/box3.jpg" alt="Робота з графікою на планшеті" width="370">
                 </li>
             </ul>
         </section>
@@ -89,17 +89,17 @@
             </h2>
             <ul>
                 <li>
-                    <img src="./images/img8.jpg" alt="Photo by Ihor Demyanenko" width="270">
+                    <img src="./images/img8.jpg" alt="Фото Ігор Дем'яненко" width="270">
                     <p>Ігор Дем'яненко</p>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img9.jpg" alt="Photo by Olga Repina" width="270">
+                    <img src="./images/img9.jpg" alt="Фото Ольга Рєпіна" width="270">
                     <p>Ольга Рєпіна</p>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/img10.jpg" alt="Photo by Mykola Tarasov" width="270">
+                    <img src="./images/img10.jpg" alt="Фото Микола Тарасов" width="270">
                     <p>Микола Тарасов</p>
                     <p>Marketing</p>
                 </li>
