--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         ПЛАНУВАННЯ
                     </h3>
                     <p>
-                        Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. 
+                        Так само консультація з широким активом значною мірою зумовлює.
                     </p>
                 </li>
                 <li>
